// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Todo Search should match snapshoot when state equal current state 1`] = `
<styled.div>
  <button
    className="btn btn-link px-2 py-0 my-1 active"
    id="A"
    onClick={[Function]}
  >
    a
  </button>
  <span>
    |
  </span>
</styled.div>
`;

exports[`Todo Search should match snapshoot when state not equal current state 1`] = `
<styled.div>
  <button
    className="btn btn-link px-2 py-0 my-1 "
    id="A"
    onClick={[Function]}
  >
    a
  </button>
  <span>
    |
  </span>
</styled.div>
`;
